--- a/KutuphaneV1/KutuphaneV1.csproj
+++ b/KutuphaneV1/KutuphaneV1.csproj
@@ -107,6 +107,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmYazarEkle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmYazarEkle.Designer.cs">
+      <DependentUpon>frmYazarEkle.cs</DependentUpon>
+    </Compile>
     <Compile Include="KitapEkle.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,6 +123,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmYazarEkle.resx">
+      <DependentUpon>frmYazarEkle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="KitapEkle.resx">
       <DependentUpon>KitapEkle.cs</DependentUpon>
