--- a/KutuphaneV1/KutuphaneV1.csproj
+++ b/KutuphaneV1/KutuphaneV1.csproj
@@ -107,7 +107,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess\KiraDAL.cs" />
+    <Compile Include="DataAccess\KullaniciDAL.cs" />
     <Compile Include="DataAccess\KutuphaneContext.cs" />
+    <Compile Include="DataAccess\TurDAL.cs" />
+    <Compile Include="DataAccess\YayinEviDAL.cs" />
     <Compile Include="DataAccess\YazarDAL.cs" />
     <Compile Include="Entity\Kira.cs" />
     <Compile Include="Entity\Kitap.cs" />
@@ -166,6 +170,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YayinEviEkle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="YayinEviEkle.Designer.cs">
+      <DependentUpon>YayinEviEkle.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -199,6 +209,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="YayinEviEkle.resx">
+      <DependentUpon>YayinEviEkle.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
